# niel

./: .gitignore  README.md  pyproject.toml
src/niel/: __init__.py  cli.py  core.py
src/niel/client/: __init__.py  line.py
src/niel/commands/: __init__.py  auth.py  create.py  default.py  drop.py  image.py  link.py  list_menus.py  set_default.py  unlink.py  user.py
src/niel/types/: __init__.py  action.py  area.py  bounds.py  rich_menu.py  size.py
tests/: __init__.py  core.py
