[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core']


[tool.poetry]
authors = ['Sitt Guruvanich <aekazitt+github@gmail.com>']
description = 'Command line interface for handling LINE Rich menus via Messaging API'
license = 'MIT'
name = 'niel'
packages = [{from='src', include='niel'}]
version = '0.1.0'
readme = 'README.md'


[tool.poetry.dependencies]
click = '^8.1.7'
httpx = '^0.27.0'
pydantic = '^2.6.2'
python = '^3.8'
pyyaml = "^6.0.1"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
mypy = '^1.8.0'
ruff = '^0.3.7'


[tool.poetry.scripts]
niel = 'niel.core:cli'


[tool.ruff]
indent-width = 2
line-length = 100
target-version = 'py38'


[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401']  # Ignore empty imports
