[build-system]
build-backend = 'hatchling.build'
requires = [ 'hatchling' ]


[project]
authors = [
  { email='aekazitt+github@gmail.com', name='Sitt Guruvanich'},
]
classifiers = [
  'Framework :: AsyncIO',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3 :: Only',
]
dependencies = [
  'click >=8.1.7',
  'httpx >=0.27.0',
  'pydantic >=2.6.2',
  'pyyaml >=6.0.1',
  'rich >=13.7.1',
]
description = 'Command line interface for handling LINE Rich menus via Messaging API'
homepage = 'https://github.com/aekasitt/niel'
license = 'MIT'
name = 'niel'
readme = 'README.md'
requires-python = '>=3.9'
repository = 'https://github.com/aekasitt/niel'
version = '0.1.0'


[project.scripts]
niel = 'niel.core:cli'


[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true


[tool.ruff]
indent-width = 2
line-length = 100
target-version = 'py39'


[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401']  # Ignore empty imports


[tool.uv]
dev-dependencies = [
  "mypy>=1.8.0",
  'ruff >=0.3.7',
]
